argo/apps/transmission/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: transmission
  namespace: media
spec:
  selector:
    app: transmission
  ports:
    - port: 9091
      targetPort: 9091
